--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,15 @@
 [project]
-name = "purple_swe_agent"
+name = "codewalk-qa-agent"
 version = "0.1.0"
-description = "A debate agent"
+description = "A2A agent for answering codebase questions"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "a2a-sdk[http-server]>=0.3.20",
     "python-dotenv>=1.2.1",
     "uvicorn>=0.38.0",
-    "google-genai>=1.55.0",
+    "openai>=1.55.0",
+    "pyyaml>=6.0",
 ]
 
 [project.optional-dependencies]
