--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -49,6 +49,7 @@ jobs:
             SECRETS_JSON: ${{ toJson(secrets) }}
         run: |
           echo "$SECRETS_JSON" | jq -r 'to_entries[] | "\(.key)=\(.value)"' > .env
+          echo "QA_API_KEY=${{ secrets.GOOGLE_API_KEY }}" >> .env
           docker run -d -p 9019:9019 --name agent-container --env-file .env $(echo "${{ steps.meta.outputs.tags }}" | head -n1) --host 0.0.0.0 --port 9019
           timeout 30 bash -c 'until curl -sf http://localhost:9019/.well-known/agent-card.json > /dev/null; do sleep 1; done'
 
